# UltrasonicsSimulator

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
examples/: 3D_simulation.py  basic_simulation.py  focus_transducers.py  optimise_x_laplacian.py  output_transducer_array.py
src/UltrasonicsSimulator/: Field.hpp  Field.ipp  Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Transducer.cpp  Transducer.hpp  field.hpp  field.ipp  optimisation_data.cpp  optimisation_data.hpp  particle.cpp  particle.hpp  simulation.cpp  simulation.hpp  transducer.cpp  transducer.hpp
src/pybind/: field_pybind.cpp  particle_pybind.cpp  pybinder.cpp  simulation_pybind.cpp  transducer_pybind.cpp  vtk_pybind.cpp
src/vtk/: pvd.cpp  pvd.hpp  vtr.cpp  vtr.hpp  vtr.ipp  vtu.cpp  vtu.hpp
